--- a/pseudocode_dump/yp_symbol_conversions.tex
+++ b/pseudocode_dump/yp_symbol_conversions.tex
@@ -18,11 +18,11 @@
 \begin{document}
 \maketitle
 
-\begin{tabular}{rl}
-	\textbf{Yellowpaper Notation} & \textbf{Pseudocode Equivalent} \\
-	$\sigma$ & \texttt{world\_state\footnote{Alternatively, global\_state, or actual\_state.}} \\
-	$\Upsilon$ & \texttt{state\_transition\footnote{Alternatively, state\_transition\_function, or stf}} \\
-	$\mu$ & \texttt{actualizing\_state \footnote{Alternatively, machine\_state.}} \\
+\begin{tabular}{|rlll|}
+	\textbf{Yellowpaper Notation} & \textbf{Pseudocode Equivalent 1} & \textbf{Pseudocode Equivalent 2} & \textbf{Pseudocode Equivalent 3} \\
+	$\sigma$ & \texttt{world\_state} & \texttt{global\_state} & \texttt{actual\_state} \\
+	$\Upsilon$ & \texttt{state\_transition} & \texttt{state\_transition\_function} & \texttt{stf} \\
+	$\mu$ & \texttt{actualizing\_state} & \texttt{machine\_state} & \texttt{}  \\
 	
 \end{tabular}
 
