--- a/offwhtp/off-white paper.tex
+++ b/offwhtp/off-white paper.tex
@@ -624,7 +624,7 @@ ogs\_bloom} from the \texttt{tx\_receipt}.
 			\hline
 			\end{longtable}
 
-	        \subsection{0x40 to 0x45: Block Data}
+	        \subsection{0x40's: Block Data}
 			\begin{longtable}{|cP{2.8cm}cccp{6cm}|}
 			\hline
 			\textbf{Data} & \textbf{Opcode} & \textbf{Gas}  & \textbf{Input}  & \textbf{Output} & \textbf{Description} \\
@@ -638,7 +638,7 @@ ogs\_bloom} from the \texttt{tx\_receipt}.
 			\hline
 			\end{longtable}
 
-		\subsection{Byte value 0x50's: Stack, memory, storage, and flow operations.}
+		\subsection{0x50's: Stack, memory, storage, and flow operations.}
 			\begin{longtable}{|cP{2.8cm}cccp{6cm}|}
 			\hline
 			\textbf{Data} & \textbf{Opcode} & \textbf{Gas}  & \textbf{Input}  & \textbf{Output} & \textbf{Description} \\
@@ -658,7 +658,7 @@ ogs\_bloom} from the \texttt{tx\_receipt}.
 			\hline
 			\end{longtable}
 
-		\subsection{0x60 to 0x7f: Push Operations}
+		\subsection{0x60-70's: Push Operations}
 			\begin{longtable}{|cP{2.8cm}cccp{6cm}|}
         		\hline
         		\textbf{Data} & \textbf{Opcode} & \textbf{Gas}  & \textbf{Input}  & \textbf{Output} & \textbf{Description} \\
@@ -698,7 +698,7 @@ ogs\_bloom} from the \texttt{tx\_receipt}.
 			\hline
 			\end{longtable}
 
-		\subsection{0x80 to 0x8f: Duplication Operations}
+		\subsection{0x80's: Duplication Operations}
 			\begin{longtable}{|cP{2.8cm}cccp{6cm}|}
 		        \hline
 		        \textbf{Data} & \textbf{Opcode} & \textbf{Gas}  & \textbf{Input}  & \textbf{Output} & \textbf{Description} \\
@@ -723,7 +723,7 @@ ogs\_bloom} from the \texttt{tx\_receipt}.
 			\end{longtable}
         
 	
-		\subsection{90s: Swap Operations}
+		\subsection{0x90's: Swap Operations}
 			\begin{longtable}{|cP{2.8cm}cccp{6cm}|}
 		        \hline  
 		        \textbf{Data} & \textbf{Opcode} & \textbf{Gas}  & \textbf{Input}  & \textbf{Output} & \textbf{Description} \\
@@ -747,7 +747,7 @@ ogs\_bloom} from the \texttt{tx\_receipt}.
 			\hline
 			\end{longtable}
 
-		\subsection{0xa0 to 0xa4: Logging Operations}
+		\subsection{0xa0's: Logging Operations}
 			\begin{longtable}{|cP{2.8cm}cccp{6cm}|}
 		        \hline  
 		        \textbf{Data} & \textbf{Opcode} & \textbf{Gas}  & \textbf{Input}  & \textbf{Output} & \textbf{Description} \\
