--- a/pseudocode_dump/yp_symbol_conversions.tex
+++ b/pseudocode_dump/yp_symbol_conversions.tex
@@ -17,14 +17,21 @@
 \addbibresource{~/modules/References.bib}
 \begin{document}
 \maketitle
+\centering
+\begin{tabular}{|rl|}
+	\hline
+	\textbf{YP Notation} & \textbf{Pseudocode} \\
+	\hline
+	$\boldsymbol{\sigma}$ & \texttt{actual\_state} \\
+	$\mu$ & \texttt{actualizing\_state} \\
+	$\Upsilon$ & \texttt{state\_actualization\_function} \\
+	$\Pi$ & \texttt{block\_level\_state\_actualization\_function} \\
+	$\Omega$ & \texttt{block\_finalization\_state\_actualization\_function} \\
+	$\mathbb{B}$ & \texttt{all\_byte\_sequences(set)} \\
+	$\mathbb{P}$ & \texttt{all\_non\_negative\_scalars(set)} \\
+	\textit{B} & \texttt{actualizing\_block} \\
+	$\equiv$ & $=$ \\
 
-\begin{tabular}{|cll|}
-	\hline
-	\textbf{YP Notation} & \textbf{YP Verbiage} & \textbf{Pseudocode} \\
-	\hline
-	$\boldsymbol{\sigma}$ & World State & \texttt{actual\_state} \\
-	$\mu$ & Machine State & \texttt{actualizing\_state} \\
-	$\Upsilon$ & State Transition Function & \texttt{state\_actualization\_function} \\
 	\hline
 \end{tabular}
 
