--- a/pseudocode_dump/yp_symbol_conversions.tex
+++ b/pseudocode_dump/yp_symbol_conversions.tex
@@ -18,7 +18,7 @@
 \begin{document}
 \maketitle
 \centering
-\begin{tabular}{|rl|}
+\begin{tabular}{rl}
 	\hline
 	\textbf{YP Notation} & \textbf{Pseudocode} \\
 	\hline
@@ -30,6 +30,9 @@
 	$\mathbb{B}$ & \texttt{all\_byte\_sequences(set)} \\
 	$\mathbb{P}$ & \texttt{all\_non\_negative\_scalars(set)} \\
 	\textit{B} & \texttt{actualizing\_block} \\
+	\textit{C} & \texttt{operation\_cost} \\
+	$\mathcal{L}$ & \texttt{last\_item\_in(set)} \\
+	$\delta$ & \texttt{stack\_inputs} \\
 	$\equiv$ & $=$ \\
 
 	\hline
