--- a/pseudocode_dump/yp_symbol_conversions.tex
+++ b/pseudocode_dump/yp_symbol_conversions.tex
@@ -32,7 +32,7 @@
 	\textit{B} & \texttt{actualizing\_block} \\
 	\textit{C} & \texttt{operation\_cost} \\
 	$\mathcal{L}$ & \texttt{last\_item\_in(set)} \\
-	$\delta$ & \texttt{stack\_inputs} \\
+	$\delta$ & \texttt{stack\_input} \\
 	$\equiv$ & $=$ \\
 
 	\hline
