--- a/offwhtp/off-white paper.tex
+++ b/offwhtp/off-white paper.tex
@@ -265,7 +265,7 @@
 			
 		\subsection{Data Structures}
 
-			\subsubsection{Merkle-Patricia Trees} Merkle Derkle Fee-Fi-Fo-Ferkle Merkle--\textit{patricia-tries}
+			\subsubsection{Merkle-Patricia Trees} 
 			
 			\subsubsection{World State}
 				Also known as \textit{Actual State}, this is a \textsc{mapping} of \textbf{addresses} and \textbf{account states} through the use of RLP.The mapping is stored as a Merkle-Patricia \gls{trie} in a \textsc{database backend}.\footnote{The database backend is accessed by users through an external application, most likely an Ethereum client; see also: \gls{state database}} that maintains a mapping of bytearrays to bytearrays.\footnote{A bytearray is specific set of bytes [data] that can be loaded into memory. It is a structure for storing binary data, e.g. the contents of a file.} The cryptographic internal data going back to the \gls{root node} represents the \textit{State} of the Blockchain at any given root, i.e. at any given \textit{time}.\footnote{This permanent data structure makes it possible to easily recall any previous state with its root hash keeping the resources off-chain and minimizing on-chain storage needs.}As a whole, the state is the sum total of database relationships in the \textbf{ \gls{state database}}. The state is an inert position on the chain, a position between prior state and post state; a block's frame of reference, and a defined set of relationships to that frame of reference.
