--- a/mechanisms/block/headercomponents.tex
+++ b/mechanisms/block/headercomponents.tex
@@ -1,31 +1,12 @@
-\documentclass[9pt,a4paper,oneside]{scrartcl}
-\usepackage[latin1]{inputenc}
-\usepackage{amsmath}
-\usepackage{amsfonts}
-\usepackage{amssymb}
-\usepackage{makeidx}
-\usepackage{graphicx}
-\usepackage{booktabs}
-\usepackage[
-	   style=ieee
-	   ]
-	   {biblatex}
-\usepackage[a4paper,width=170mm,top=18mm,bottom=22mm,includeheadfoot]{geometry}
-\usepackage{mathtools}
-\usepackage{concmath}
-\usepackage[T1]{fontenc}
-\usepackage{pgf}
-\usepackage{tikz}
-\author{}
-\title{Ethereum Block}
-\date{}
-\addbibresource{~/modules/References.bib}
-\begin{document}
-\maketitle
-\paragraph{Mechanism}: \textsc{block}
-\paragraph{Description}: Contains 16 elements in the block header and $\geq 0$ transactions in the block footer. \\
-
-
+% Graphic for TeX using PGF
+% Title: /home/micah/modules/headercomponents.dia
+% Creator: Dia v0.97+git
+% CreationDate: Tue Nov 28 10:10:52 2017
+% For: micah
+% \usepackage{tikz}
+% The following commands are not supported in PSTricks at present
+% We define them conditionally, so when they are implemented,
+% this pgf file will use them.
 \ifx\du\undefined
   \newlength{\du}
 \fi
@@ -336,7 +317,3 @@
 \pgfsetfillopacity{1.000000}
 \node[anchor=base west,inner sep=0pt,outer sep=0pt,color=dialinecolor] at (24.950000\du,18.400000\du){};
 \end{tikzpicture}
-
-\printbibliography
-\end{document}
-
