new file:   modules/transactions_root/transactions_root.aux 	new file:   modules/transactions_root/transactions_root.bcf 	new file:   modules/transactions_root/transactions_root.log 	new file:   modules/transactions_root/transactions_root.pdf 	new file:   modules/transactions_root/transactions_root.run.xml 	renamed:    modules/transactions_root/template.tex -> modules/transactions_root/transactions_root.tex

--- a/modules/transactions_root/transactions_root.tex
+++ b/modules/transactions_root/transactions_root.tex
@@ -12,13 +12,13 @@
 	   {biblatex}
 \usepackage{mathtools}
 \author{}
-\title{#NAME#}
+\title{List Hash}
 \date{}
 \addbibresource{~/modules/References.bib}
 \begin{document}
 \maketitle
-\paragraph{Notation}: #NOTATION#
-\paragraph{Description}: #DESCRIPTION#
+\paragraph{Notation}: \texttt{listhash}
+\paragraph{Description}: The \texttt{K256} hash of the root node of the organizational tree containing each \texttt{transaction} in the \texttt{transactions\_list}.
 
 \printbibliography
 \end{document}
