new file:   modules/keccak_256/keccak_256.aux

--- a/modules/transactions_root/transactions_root.tex
+++ b/modules/transactions_root/transactions_root.tex
@@ -18,7 +18,8 @@
 \begin{document}
 \maketitle
 \paragraph{Notation}: \texttt{listhash}
-\paragraph{Description}: The \texttt{K256} hash of the root node of the organizational tree containing each \texttt{transaction} in the \texttt{transactions\_list}.
+\paragraph{Alternatively:} Transactions Root
+\paragraph{Description}: The \texttt{K256} hash of the root node\footnote{A root node is a type of progenitor node} that precedes the \texttt{transactions} in the \texttt{transactions\_list} section of a Block.
 
 \printbibliography
 \end{document}
